# FNIStash

./: FNIStash.cabal  LICENSE  Setup.lhs
GUI/: GUI.html
GUI/css/: GUI.css
deploy/: Launch FNIStash.bat
deploy/Licenses/: BSD3.txt  Licenses.txt
src/: Main.hs
src/FNIStash/Comm/: Messages.hs
src/FNIStash/File/: Crypto.hs  DAT.hs  General.hs  Item.hs  Location.hs  PAK.hs  SharedStash.hs  VarIDs.hs  Variables.hs
src/FNIStash/Logic/: Backend.hs  Config.hs  Crypto.hs  DB.hs  Data.hs  Env.hs  File.hs  Initialize.hs  Item.hs  Items.hs  Operations.hs  Search.hs  Translate.hs  Variables.hs
src/FNIStash/Logic/File/App/: PAK.hs
src/FNIStash/Logic/File/User/: Crypto.hs  SharedStash.hs
src/FNIStash/UI/: Effects.hs  Frontend.hs  Icon.hs  Layout.hs
wwwroot/: GUI.html
